<resources>
    <string name="app_name">QinGong</string>
    <string name="search">搜索</string>
    <string name="searchlabel">searchlabel</string>
    <string name="homepage_fragment">homepage_fragment</string>
    <string name="share_fragment">share_fragment</string>
    <string name="self_fragment">self_fragment</string>
    <string name="login_hint_account">Account</string>
    <string name="login_hint_password">Password</string>
    <string name="login_checkbox_re">记住密码</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_confirm">登录</string>
</resources>